--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,8 +127,21 @@ h4 {
     height: 250px;
     background-color: #666666;
     float: left;
-    margin: 30px 30px 30px 0px;
-    background-image: url(https://picsum.photos/250/250)
+    background-image: url(https://picsum.photos/250/250);
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+#image_2, #image_4 {
+    margin-left: 25px;
+}
+
+#image_1, #image_2 {
+    margin-top: 20px;
+}
+
+#image_5 {
+    margin-bottom: 30px
 }
 
 section {
@@ -199,9 +212,11 @@ form, .image_link {
 }
 
 #name, #address, #message {
-    width: 99.5%;
+    width: 98.5%;
     margin: auto;
-    padding: 5px 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
 
 }
 
@@ -222,4 +237,29 @@ form, .image_link {
 #button:hover {
     cursor: pointer;
 
+}
+
+@media screen and (max-width: 980px) {
+    section, #about, #portfolio, #contact{
+        width: 560px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+   
+}
+
+
+@media screen and (max-width: 768px) {
+    section, #about, #portfolio, #contact {
+        width: 560px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+    #heading {
+        width: 560px;
+    }
+
+   
 }
