--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,8 +332,13 @@ form, .image_link {
         margin: auto;
         width: 100%;
         margin-bottom: 10px;
+        margin-left: 31%;
+           
+    }
                
         
+    ul {
+        padding-top: 15px;
     }
 
    
