--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,5 +341,20 @@ form, .image_link {
         padding-top: 15px;
     }
 
+    #image_1, #image_2, #image_3, #image_4, #image_5 {
+        display: inline-block;
+        float: none;
+        margin-bottom: 20px;
+        margin-top: 0px;
+        margin-left: 115px;
+        
+    }
+
+    #image_1 {
+        margin-top: 20px;
+    }
+
+    
+
    
 }
