--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,10 @@ form, .image_link {
         width: 40%;
         height: 40%;
     }
+
+    h2 {
+        padding: 20px 20px;
+    }
           
 }
 
