--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,6 @@ form, .image_link {
         width: 560px;
     }
 
-   
 }
 
 
@@ -357,6 +356,10 @@ form, .image_link {
     #image_1 {
         margin-top: 20px;
     }
+
+    #headshot {
+        width: 60%;
+        height: 60%;
 
     
 
